# embedded_com

./: .gitattributes  .gitignore  BOARD_ENV_BACKUP_README_CN.md  CLAUDE.md  ENVIRONMENT.md  LOG_STANDARD.md  README.md  ROBOT_MOTION_CONTRACT.md  TODO.md  backup_board_env.sh  next_todo.md  pytest.ini  requirements-runtime.txt  start_robot_stack.sh
VISTA/: ARCHITECTURE.md  AUDIT_TODO.md  EVENT_DESCRIPTION.md  IMPLEMENTATION_STATUS.md  INTERFACES.md  LOGGING_RULES.md  MD_DRIFT_AUDIT.md  NEXT_TODO.md  PRODUCT_REQUIREMENTS.md  ROI_SIMPLIFIED_MAPPING_PATCH_NOTES.md  ReadMe.md  VISION_ENGINE_TODO.md  arch_optimize.md  branch_discovery.md  plan_implement.md  table_plane_detector_modes_analysis.md
VISTA/vision_module/backend/camera/cxx/: CMakeLists.txt  cam_gst.cpp
VISTA/vision_module/model/yolov8s-seg/model_farm_yolov8s_seg_qsc6490_qnn2.36_int8_aidlite/cpp/: CMakeLists.txt  run_test.cpp
Voice/: ONLINE_ASR_MIGRATION_NOTES.md  README.md  inspect_funasr_online.py  start_voice_asr.sh  test_online_model_minimal.py
common/: __init__.py  base_module.py  config_loader.py  console_presenter.py  runtime_logging.py  schema.py  system_metrics.py
configs/: mobile_gateway.mqtt.example.yaml  mqtt_cloud.env.example  system_config.yaml
dashboard/: README.md  build_dashboard.py  build_picture_assets.py  index.html
docs/: architecture.md  branch_discovery.md  command_protocol.md  config.md  docking_field_cleanup_audit.md  docking_refactor_notes.md  grasp_protocol_analysis.md  handover.md  ipc_refactor_notes.md  mobile_control_next_steps.md  mobile_control_repo_analysis.md  testing.md  (+12 more)
(+449 files in other folders)
